--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
   "rewrites": [
     { "source": "/youtube/:id", "destination": "/" },
+    { "source": "/twitter/:id", "destination": "/" },
+    { "source": "/youtube", "destination": "/" },
+    { "source": "/twitter", "destination": "/" },
     { "source": "/(.*)", "destination": "/" }
   ]
 }
